# Hybrid-Gen-AI-Vehicle

./: .gitignore  README.md  animations.py  dashboard_container.py  main.py  main_window.py  pyproject.toml  pyrightconfig.json  styles.py  theme.py
Backend/: .env  .gitignore  README.md  backend.py  database.py  play_audio.py  pyrightconfig.json  recommender.py  requirements.txt
Backend/tests/: test_consistency.py  test_recommender.py
Dashboard/: .gitignore  animations.py  dashboard_container.py  main.py  main_window.py  pyproject.toml  styles.py  theme.py  trip_logic.py
Dashboard/widgets/: add_vehicle_dialog.py  car_seat_selector.py  card.py  header.py  recommendation_panel.py  segmented_mode_bar.py  speedometer.py  stat_cards_panel.py  trip_progress_panel.py  trip_setup_form.py
Models/: .gitignore  README.md  pyproject.toml  synthetic_trip_capgemini.py
Models/pipeline/: Range.py  __init__.py  config.py  data.py  inference.py  (+8 more)
Simulator/: .gitignore  DATA_DICTIONARY.md  pyproject.toml
Simulator/scripts/: generate_and_validate.py
Simulator/simulator/: __init__.py  behavior.py  config.py  diagnostics.py  drivers.py  entities.py  environment.py  generate_dataset.py  labels.py  ml_prep.py  noise.py  physics.py  trip_purposes.py  trip_sampler.py  validation.py  vehicles.py
Simulator/tests/: test_diagnostics.py  test_labels.py  test_ml_prep.py  test_physics.py  test_sampling.py
widgets/: __init__.py  car_seat_selector.py  card.py  recommendation_panel.py  segmented_mode_bar.py  speedometer.py  stat_cards_panel.py  trip_progress_panel.py  trip_setup_form.py
